--- a/bloks/cover/__subtitle/cover__subtitle.css
+++ b/bloks/cover/__subtitle/cover__subtitle.css
@@ -1,10 +1,12 @@
-.plece__website-link{
-    color: white;
-    font-family: Inter;
+.cover__subtitle {
+    width: 360px;
+    margin: auto;
     font-size: 18px;
     font-weight: 400;
     line-height: 22px;
     letter-spacing: 0em;
-    text-align: left;
+    text-align: center;
+
+
 
 }
