--- a/bloks/header/header.css
+++ b/bloks/header/header.css
@@ -1,4 +1,8 @@
 .header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    margin-top: 28px;
+    padding-left: 50px;
+    padding-right: 50px;
 }
