--- a/bloks/places/__text/places__text.css
+++ b/bloks/places/__text/places__text.css
@@ -1,11 +1,13 @@
-.place__paragraph{
-    color: white;
+.places__text {
     font-family: Inter;
     font-size: 18px;
     font-weight: 400;
     line-height: 29px;
     letter-spacing: 0em;
     text-align: left;
+    color: white;
     margin-block-start: 0;
     margin-block-end: 0;
+    margin: 0px 0px 30px 0px;
+
 }
