--- a/bloks/places/__title/places__title.css
+++ b/bloks/places/__title/places__title.css
@@ -1,11 +1,9 @@
-.place__title{
-    color: white;
-    font-family: Inter;
+.places__title {
     font-size: 72px;
     font-weight: 900;
     line-height: 76px;
     letter-spacing: 0em;
     text-align: left;
-    margin-block-start: 0;
-    margin-block-end: 0;
+    max-width: 460px;
+    width: 100%;
 }
